# fulcrum

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  appendix-architecture.md  appendix-cheatsheet.md  ch01-window.md  ch02-entities.md  ch03-simulation.md  ch04-world.md  ch05-animation.md  ch06-gems.md  ch07-data-driven.md  ch08-ui.md  ch09-tools.md  ch10-determinism.md  ch11-particles.md  ch12-spatial.md  ch13-modding.md  ch14-replays.md  fz01-what-is-a-game.md  fz02-state.md  fz03-time-and-input.md  fz04-rules.md  fz05-presentation.md  fz06-testing.md  introduction.md
books/animation/: book.toml
books/animation/src/: SUMMARY.md  introduction.md  ref-aseprite.md  ref-clips.md  ref-recipes.md  ref-state-machines.md  tut01-first-animation.md  tut02-switching.md  tut03-state-machine.md  tut04-frame-keyed.md  tut05-testing.md
crates/fulcrum/: Cargo.toml
crates/fulcrum-anim/: Cargo.toml
crates/fulcrum-anim/src/: aseprite.rs  clip.rs  lib.rs  player.rs  state_machine.rs
crates/fulcrum-anim/tests/: headless_load.rs  player.rs  state_machine.rs
crates/fulcrum-anim/tests/fixtures/: hero.animsm.ron  hero.json
crates/fulcrum-asset/: Cargo.toml
crates/fulcrum-asset/src/: assets.rs  handle.rs  lib.rs  vfs.rs  watch.rs
crates/fulcrum-asset/tests/: assets.rs  watch.rs
crates/fulcrum-audio/: Cargo.toml
crates/fulcrum-audio/src/: lib.rs
crates/fulcrum-core/: Cargo.toml
crates/fulcrum-core/src/: app.rs  hierarchy.rs  input.rs  lib.rs  math.rs  plugin.rs  replay.rs  rng.rs  schedule.rs  time.rs  transform.rs
crates/fulcrum-core/tests/: app.rs  determinism.rs  input.rs
crates/fulcrum-mod/: Cargo.toml
crates/fulcrum-mod/src/: bindings.rs  lib.rs  loader.rs  lua_api.md  manifest.rs  runtime.rs  sandbox.rs
crates/fulcrum-mod/tests/: bindings.rs  loader.rs  runtime.rs
crates/fulcrum-render/: Cargo.toml
crates/fulcrum-render/src/: atlas.rs  batch.rs  camera.rs  gizmos.rs  gpu.rs  lib.rs  particles.rs  reload.rs  shader.wgsl  shader_gizmos.wgsl  sprite.rs  text.rs  texture.rs  tilemap.rs  window.rs
crates/fulcrum-render/tests/: decode.rs
crates/fulcrum-scene/: Cargo.toml
crates/fulcrum-scene/src/: defs.rs  lib.rs  prefab.rs  registry.rs  scene.rs  state_hash.rs  value_de.rs
crates/fulcrum-scene/tests/: registry.rs  replay.rs  spawning.rs
crates/fulcrum-spatial/: Cargo.toml
crates/fulcrum-spatial/src/: grid.rs  lib.rs  nav.rs
crates/fulcrum-spatial/tests/: grid.rs  nav.rs
crates/fulcrum-ui/: Cargo.toml
crates/fulcrum-ui/src/: debug.rs  extract.rs  interact.rs  layout.rs  lib.rs  loader.rs  node.rs  widgets.rs
crates/fulcrum/examples/: atlas.rs  camera.rs  gizmos.rs  hello_sprite.rs  hot_reload.rs  inspector.rs  interp.rs  particles.rs  sprites.rs  stress.rs  text.rs  tilemap.rs  ui.rs
crates/fulcrum/examples/assets/fx/: spark.fx.ron
crates/fulcrum/src/: lib.rs
docs/: determinism.md
games/_template/: .gitignore  Cargo.toml  README.md
games/_template/src/: game.rs  lib.rs  main.rs
games/_template/tests/: determinism.rs
games/asteroids/: Cargo.toml
games/asteroids/assets/: ship.json
games/asteroids/src/: game.rs  lib.rs  main.rs
games/asteroids/tests/: determinism.rs
games/dojo/: Cargo.toml
games/dojo/assets/: dummy.json  hero.json
games/dojo/assets/anim/: dummy.animsm.ron  hero.animsm.ron
games/dojo/examples/: an01_clip.rs  an02_switching.rs  an03_machine.rs
games/dojo/src/: game.rs  lib.rs  main.rs
games/dojo/tests/: gameplay.rs
games/dungeon/: Cargo.toml  README.md
games/dungeon/assets/: creatures.json
games/dungeon/assets/anim/: player.animsm.ron
games/dungeon/assets/maps/: dungeon.map.ron
games/dungeon/assets/prefabs/: bat.prefab.ron  player.prefab.ron  skeleton.prefab.ron  slime.prefab.ron
games/dungeon/assets/scenes/: level1.scene.ron
games/dungeon/assets/ui/: hud.ui.ron
games/dungeon/src/: game.rs  lib.rs  main.rs
games/dungeon/tests/: determinism.rs  replay.rs
games/grove/: Cargo.toml
games/grove/assets/: creatures.json
games/grove/assets/anim/: player.animsm.ron
games/grove/assets/fx/: fireflies.fx.ron  spark.fx.ron
games/grove/assets/games/grove/examples/: ch01_window.rs  ch02_sprite.rs  ch03_movement.rs  ch04_world.rs  ch05_animation.rs  ch06_gems.rs
games/grove/assets/maps/: grove.map.ron
games/grove/assets/prefabs/: fox.prefab.ron  gem.prefab.ron  player.prefab.ron
games/grove/assets/scenes/: grove.scene.ron
games/grove/assets/ui/: hud.ui.ron
games/grove/examples/: ch02_sprite.rs  ch03_movement.rs  ch04_world.rs  ch05_animation.rs  ch06_gems.rs  ch11_particles.rs  ch12_pathfinding.rs  ch13_mods.rs  ch14_replay.rs
games/grove/mods/more_gems/: mod.ron
games/grove/mods/more_gems/scripts/: init.lua
games/grove/src/: game.rs  lib.rs  main.rs
games/grove/tests/: determinism.rs  mods.rs
games/pong/: Cargo.toml
games/pong/src/: game.rs  lib.rs  main.rs
games/pong/tests/: determinism.rs
games/rts-slice/: Cargo.toml  README.md
games/rts-slice/assets/effects/: death.fx.ron  explosion.fx.ron  hit.fx.ron
games/rts-slice/assets/maps/: battlefield.map.ron
games/rts-slice/assets/units/: soldier.unit.ron  worker.unit.ron
games/rts-slice/mods/sample_mod/: README.md  mod.ron
games/rts-slice/mods/sample_mod/scripts/: init.lua
games/rts-slice/mods/sample_mod/units/: berserker.unit.ron
games/rts-slice/mods/waves/: mod.ron
games/rts-slice/mods/waves/scripts/: init.lua
games/rts-slice/src/: game.rs  lib.rs  main.rs
games/rts-slice/tests/: battle.rs  determinism.rs  replay.rs
games/snake/: Cargo.toml  README.md
games/snake/examples/: fz01_loop.rs  fz02_state.rs  fz03_move.rs  fz04_rules.rs
games/snake/src/: game.rs  lib.rs  main.rs
games/snake/tests/: gameplay.rs
plans/: 001-core-skeleton.md  002-2d-essentials.md  003-data-driven-structure.md  004-power-features.md
tools/: gen_dojo_art.py
