[workspace]
resolver = "2"
members = ["crates/*", "games/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcerise/fulcrum"

[workspace.dependencies]
# internal crates
fulcrum = { path = "crates/fulcrum" }
fulcrum-core = { path = "crates/fulcrum-core" }
fulcrum-render = { path = "crates/fulcrum-render" }
fulcrum-asset = { path = "crates/fulcrum-asset" }
fulcrum-audio = { path = "crates/fulcrum-audio" }
fulcrum-anim = { path = "crates/fulcrum-anim" }

# external, pinned 2026-07-08
bevy_ecs = "0.19"
wgpu = "30.0"
winit = "0.30"
glam = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
rand_pcg = "0.10"
rand_core = "0.10"
rustc-hash = "2.1"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
fontdue = "0.9"
kira = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12"

# Keep dependencies (wgpu, image decoding, ...) fast in debug builds.
[profile.dev.package."*"]
opt-level = 2
