[package]
name = "fulcrum-anim"
description = "Fulcrum animation: frame clips, players, and Aseprite import."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fulcrum-core = { workspace = true }
fulcrum-asset = { workspace = true }
fulcrum-render = { workspace = true }
bevy_ecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
