[package]
name = "fulcrum-audio"
description = "Fulcrum audio: sound assets and playback via kira."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fulcrum-core = { workspace = true }
fulcrum-asset = { workspace = true }
bevy_ecs = { workspace = true }
kira = { workspace = true }
log = { workspace = true }
