[package]
name = "fulcrum"
description = "An opinionated, deterministic 2D game engine. This is the facade crate: use fulcrum::prelude::*."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fulcrum-core = { workspace = true }
fulcrum-render = { workspace = true }
fulcrum-asset = { workspace = true }
# Required for #[derive(Component)] etc. in downstream code: the derive macros emit `bevy_ecs::`
# paths, which resolve only when the compiling crate depends on bevy_ecs directly.
bevy_ecs = { workspace = true }
