[package]
name = "pong"
description = "Fulcrum milestone game 1: Pong."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fulcrum = { workspace = true }
env_logger = { workspace = true }
# Manifest-only: lets #[derive(Component)] resolve the `bevy_ecs::` paths it generates.
# Game source imports only fulcrum::prelude.
bevy_ecs = { workspace = true }
