[package]
name = "rts-slice"
description = "Fulcrum milestone game 4: an RTS slice — selection, flow-field movement, combat, mods, replays."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fulcrum = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
# Manifest-only: lets #[derive(Component)] resolve the `bevy_ecs::` paths it generates.
bevy_ecs = { workspace = true }
log = { workspace = true }
